<resources>
    <string name="app_name">Volant des Dômes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_title_category">Catégories</string>
    <string name="nav_title_articles">Articles</string>
    <string name="nav_title_pages">Pages</string>
    <string name="nav_title_favorites">Favoris</string>
    <string name="nav_title_settings">Paramètres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_title">Aucune donnée</string>
    <string name="empty_subtitle">Revenez plus tard</string>
</resources>
