<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_title_favorites" />

    <item
        android:id="@id/navigation_articles"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_title_articles" />

    <item
        android:id="@id/navigation_category"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_title_category" />

    <item
        android:id="@+id/navigation_pages"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_title_pages" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_title_settings" />

</menu>
